--- a/app/src/main/res/layout/activity_found_report.xml
+++ b/app/src/main/res/layout/activity_found_report.xml
@@ -123,20 +123,20 @@
         app:tint="#9E1111" />
 
     <LinearLayout
-        android:layout_width="377dp"
-        android:layout_height="352dp"
+        android:layout_width="376dp"
+        android:layout_height="387dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.529"
+        app:layout_constraintHorizontal_bias="0.542"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.887">
+        app:layout_constraintVertical_bias="0.853">
 
         <LinearLayout
             android:id="@+id/linearLayout2"
-            android:layout_width="132dp"
-            android:layout_height="341dp"
+            android:layout_width="133dp"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
             <TextView
@@ -211,12 +211,22 @@
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
+            <TextView
+                android:id="@+id/textView40"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:gravity="center|start"
+                android:text="Campus:"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/linearLayout3"
-            android:layout_width="237dp"
-            android:layout_height="342dp"
+            android:layout_width="235dp"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
             <Spinner
@@ -225,8 +235,8 @@
                 android:layout_height="48dp"
                 android:background="@android:drawable/editbox_background"
                 android:dropDownWidth="wrap_content"
-                android:spinnerMode="dropdown"
-                android:entries="@array/category_items"/>
+                android:entries="@array/category_items"
+                android:spinnerMode="dropdown" />
 
             <EditText
                 android:id="@+id/editTextTextMultiLine"
@@ -263,11 +273,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:background="@android:drawable/editbox_background"
-                android:hint="Contact Number"
+                android:ems="10"
                 android:gravity="center|start"
+                android:hint="Contact Number"
                 android:inputType="phone"
                 android:maxLength="11"
-                android:ems="10"
                 android:padding="10dp" />
 
             <EditText
@@ -275,10 +285,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:background="@android:drawable/editbox_background"
+                android:clickable="true"
+                android:focusable="false"
                 android:gravity="center|start"
                 android:hint="Date Found"
-                android:focusable="false"
-                android:clickable="true"
                 android:inputType="date"
                 android:padding="10dp" />
 
@@ -291,6 +301,15 @@
                 android:gravity="center|start"
                 android:hint="Location Found"
                 android:inputType="textMultiLine" />
+
+            <Spinner
+                android:id="@+id/spinner10"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:background="@android:drawable/editbox_background"
+                android:dropDownWidth="wrap_content"
+                android:entries="@array/category_items"
+                android:spinnerMode="dropdown" />
 
         </LinearLayout>
 
