--- a/app/src/main/res/layout/activity_lost_report.xml
+++ b/app/src/main/res/layout/activity_lost_report.xml
@@ -126,19 +126,19 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <LinearLayout
-        android:layout_width="396dp"
-        android:layout_height="347dp"
+        android:layout_width="392dp"
+        android:layout_height="383dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.4"
+        app:layout_constraintHorizontal_bias="0.444"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textView21"
-        app:layout_constraintVertical_bias="0.896">
+        app:layout_constraintVertical_bias="0.842">
 
         <LinearLayout
-            android:layout_width="135dp"
-            android:layout_height="335dp"
+            android:layout_width="132dp"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
             <TextView
@@ -210,11 +210,21 @@
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/textView47"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:gravity="center|start"
+                android:text="Campus:"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                android:textStyle="bold" />
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="262dp"
-            android:layout_height="336dp"
+            android:layout_width="263dp"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
             <Spinner
@@ -223,8 +233,8 @@
                 android:layout_height="48dp"
                 android:background="@android:drawable/editbox_background"
                 android:dropDownWidth="wrap_content"
-                android:spinnerMode="dropdown"
-                android:entries="@array/category_items"/>
+                android:entries="@array/category_items"
+                android:spinnerMode="dropdown" />
 
             <EditText
                 android:id="@+id/editTextTextMultiLine2"
@@ -289,6 +299,15 @@
                 android:gravity="center|start"
                 android:hint="Location Found"
                 android:inputType="textMultiLine" />
+
+            <Spinner
+                android:id="@+id/spinner9"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:background="@android:drawable/editbox_background"
+                android:dropDownWidth="wrap_content"
+                android:entries="@array/category_items"
+                android:spinnerMode="dropdown" />
         </LinearLayout>
     </LinearLayout>
 
