--- a/app/src/main/res/layout/activity_found_report.xml
+++ b/app/src/main/res/layout/activity_found_report.xml
@@ -86,7 +86,8 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.027" />
+        app:layout_constraintVertical_bias="0.027"
+        android:entries="@array/menu_items"/>
 
 
     <Button
