--- a/app/src/main/res/layout/activity_lost_details.xml
+++ b/app/src/main/res/layout/activity_lost_details.xml
@@ -261,6 +261,7 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.045" />
+        app:layout_constraintVertical_bias="0.045"
+        android:entries="@array/menu_items"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
