--- a/app/src/main/res/layout/activity_lost_report.xml
+++ b/app/src/main/res/layout/activity_lost_report.xml
@@ -107,7 +107,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.027"
-        android:entries="@array/category_items"/>
+        android:entries="@array/menu_items"/>
 
     <Button
         android:id="@+id/button9"
