--- a/app/src/main/res/layout/activity_report_item.xml
+++ b/app/src/main/res/layout/activity_report_item.xml
@@ -102,7 +102,8 @@
         app:layout_constraintHorizontal_bias="0.996"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.023" />
+        app:layout_constraintVertical_bias="0.023"
+        android:entries="@array/menu_items"/>
 
     <Button
         android:id="@+id/button5"
