--- a/app/src/main/res/layout/activity_lost_report.xml
+++ b/app/src/main/res/layout/activity_lost_report.xml
@@ -306,7 +306,7 @@
                 android:layout_height="48dp"
                 android:background="@android:drawable/editbox_background"
                 android:dropDownWidth="wrap_content"
-                android:entries="@array/category_items"
+                android:entries="@array/campus"
                 android:spinnerMode="dropdown" />
         </LinearLayout>
     </LinearLayout>
