--- a/app/src/main/res/layout/activity_found_details.xml
+++ b/app/src/main/res/layout/activity_found_details.xml
@@ -236,7 +236,7 @@
             <TextView
                 android:background="@drawable/cell_border"
                 android:padding="8dp"
-                android:text="Date of Loss:"
+                android:text="Date Found:"
                 android:textColor="#000000"
                 android:textStyle="bold" />
 
@@ -251,7 +251,7 @@
             <TextView
                 android:background="@drawable/cell_border"
                 android:padding="8dp"
-                android:text="Location of Loss:"
+                android:text="Location Found:"
                 android:textColor="#000000"
                 android:textStyle="bold" />
 
