--- a/app/src/main/res/layout/activity_lost_details.xml
+++ b/app/src/main/res/layout/activity_lost_details.xml
@@ -176,7 +176,7 @@
             <TextView
                 android:background="@drawable/cell_border"
                 android:padding="8dp"
-                android:text="Date of Loss:"
+                android:text="Date Loss:"
                 android:textColor="#000000"
                 android:textStyle="bold" />
 
