--- a/app/src/main/res/layout/activity_lost_details.xml
+++ b/app/src/main/res/layout/activity_lost_details.xml
@@ -80,7 +80,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:contentDescription="Item Image"
-            android:scaleType="centerCrop" />
+            android:scaleType="fitCenter"
+            android:adjustViewBounds="true" />
+
     </FrameLayout>
 
     <!-- 🟢 Lost Item Details Table -->
