--- a/app/src/main/res/layout/activity_found_details.xml
+++ b/app/src/main/res/layout/activity_found_details.xml
@@ -139,7 +139,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:contentDescription="Item Image"
-            android:scaleType="centerCrop" />
+            android:scaleType="fitCenter"
+            android:adjustViewBounds="true" />
 
     </FrameLayout>
 
