--- a/app/src/main/res/layout/activity_found_report.xml
+++ b/app/src/main/res/layout/activity_found_report.xml
@@ -113,7 +113,8 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="16dp"
         android:contentDescription="Item Image"
-        android:scaleType="centerCrop"
+        android:adjustViewBounds="true"
+        android:scaleType="fitCenter"
         android:src="@drawable/plus_placeholder"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -122,6 +123,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.246"
         app:tint="#9E1111" />
+
 
     <LinearLayout
         android:layout_width="376dp"
