--- a/app/src/main/res/layout/activity_lost_report.xml
+++ b/app/src/main/res/layout/activity_lost_report.xml
@@ -31,7 +31,8 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="16dp"
         android:contentDescription="Item Image"
-        android:scaleType="centerCrop"
+        android:scaleType="fitCenter"
+        android:adjustViewBounds="true"
         android:src="@drawable/plus_placeholder"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
